--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "flash": "^1.1.0",
     "jest": "^29.5.0",
     "jsonwebtoken": "^9.0.1",
+    "memorystore": "^1.6.7",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
-    "pg": "^8.11.0",
-    "memorystore": "^1.6.7"
+    "pg": "^8.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.7"
   }
 }
